<resources>
    <string name="app_name">Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_meal_list">Meals</string>
    <string name="title_meal_detail">Meal detail</string>

    <string name="name_info">"%1$s"</string>
    <string name="price_info">%1$s$</string>
    <string name="discount_info">(-%1$s%%) %2$s$</string>
    <string name="meal_image">Meal image</string>
    <string name="description_label">Description</string>
    <string name="description_info">%1$s</string>
    <string name="allergies_label">Allergies</string>
    <string name="title_activity_sign_up">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_with_query">an error occured while processing your query</string>
    <string name="permission_rationale">"Contacts permissions are needed"</string>
    <string name="SignUp_First_Name">First Name</string>
    <string name="SignUp_Last_Name">Last Name</string>
    <string name="SignUp_Birth">Birth Date</string>
    <string name="SignUp_Postal">Postal Code</string>
    <string name="SignUp_Dog_Name">Dog Name</string>

    <string name="Login_SignIn">Sign In</string>
    <string name="Login_Connect">Please Connect</string>
    <string name="Login_Create">Create Account</string>
    <string name="Login_Forget">Forgot your password ?</string>
    <string name="title_activity_payer_commande">Pay Order</string>


    <!-- String related to order -->
    <string name="Order_Next"> Order </string>
    <string name="Order_End"> Bill </string>
    <string name="Ordre_Plus"> + </string>
    <string name="Ordre_Minus"> - </string>
    <string name="Order_Ajouter"> Add </string>
    <string name="Order_Cancel"> Cancel </string>
    <string name="Order_Activity"> Order </string>
    <string name="Order_Waiter"> Call Waiter </string>


    <string name="action_settings">Settings</string>

    <!-- String related to Resto -->
    <string name="Resto_Province"> Province </string>
    <string name="title_activity_resto">RestoActivity</string>
    <string name="Resto_City"> City </string>
    <string name="Resto_Resto"> Restaurant </string>
    <string name="Resto_Btn"> Confirm </string>

    <string name="Bill_Label"> Total price </string>


</resources>
