<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.usager.mobile.LoginActivity">

    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingTop="50dp"
        tools:context="com.example.usager.mobile.LoginActivity">


        <TextView
            android:text="@string/Login_Connect"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Connecter"
            android:gravity="center"
            android:paddingBottom="75dp"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="50dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/Login_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:text="@string/Login_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnregistrer"
            android:onClick="OnClick"
            android:textSize="25sp" />
        <LinearLayout
            android:orientation="horizontal"
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="match_parent"
            android:layout_height="55.5dp"
            android:id="@+id/linearLayout1">


            <TextView
                android:text="@string/Login_Create"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:id="@+id/CreerCompte"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="15sp"
                android:onClick="SignUpClick"/>
            <TextView
                android:text="@string/Login_Forget"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:id="@+id/MotPasseOublier"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
